--- a/SurvivalOfThe/SurvivalOfThe.CSharp.Editor.csproj
+++ b/SurvivalOfThe/SurvivalOfThe.CSharp.Editor.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\AirConsole\README.txt" />
+    <None Include="Assets\Optimized Tiled Loader\Instructions.txt" />
     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
