--- a/SurvivalOfThe/SurvivalOfThe.CSharp.csproj
+++ b/SurvivalOfThe/SurvivalOfThe.CSharp.csproj
@@ -229,11 +229,16 @@
     <Compile Include="Assets\AirConsole\scripts\DebugLevel.cs" />
     <Compile Include="Assets\AirConsole\scripts\Settings.cs" />
     <Compile Include="Assets\AirConsole\scripts\WebsocketListener.cs" />
+    <Compile Include="Assets\Optimized Tiled Loader\_Scripts\Block.cs" />
+    <Compile Include="Assets\Optimized Tiled Loader\_Scripts\JSON_Files.cs" />
+    <Compile Include="Assets\Optimized Tiled Loader\_Scripts\LevelEditor.cs" />
+    <Compile Include="Assets\Optimized Tiled Loader\_Scripts\LevelLoader.cs" />
     <Compile Include="Assets\Scripts\PlayerScript.cs" />
     <Compile Include="Assets\Scripts\PlayersScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\AirConsole\README.txt" />
+    <None Include="Assets\Optimized Tiled Loader\Instructions.txt" />
     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
